# parabank-tests

./: README.md  pyproject.toml  report.xml
pages/: base_page.py  login_page.py
resources/: config.py
tests/: test_login.py
